apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'Main'
//enableAssertions = true

sourceCompatibility = 11
